# script-strapi

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/script_strapi/: __init__.py  category_map.py  deserialize_excel.py  deserialize_image.py  main.py  strapi_fields.py  strapi_interfaces.py  strapi_obj.py  strapi_service.py
tests/: __init__.py  test_main.py
